# NL2SQL

./: README.md
backend/: .env  .gitignore  README.md  history.db  history.db-shm  history.db-wal  pyproject.toml  verify_backend.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/endpoints/: chat.py  history.py  relationships.py  upload.py
backend/app/core/: config.py
backend/app/services/: agent_service.py  duckdb_service.py  history_service.py  ollama_service.py  relationship_service.py  schema_tools.py  vector_store.py
backend/data/: relationships.json
backend/data/chroma_db/: chroma.sqlite3
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: GraphvizDiagram.tsx  MermaidDiagram.tsx  PlotlyChart.tsx
frontend/src/components/layout/: MainLayout.tsx  Sidebar.tsx
frontend/src/components/ui/: VirtualizedTable.tsx
frontend/src/hooks/: useChat.ts  useData.ts  useTheme.ts
frontend/src/pages/: ChatPage.tsx  DataPage.tsx  ModelingPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts  plotly-basic.d.ts
