[project]
name = "Cashout_IA"
version = "0.1.0"
description = "NL to SQL AI Assistant"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "duckdb>=1.4.2",
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.4",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "seaborn>=0.13.2",
    "uvicorn>=0.38.0",
    "weasyprint>=67.0",
    "websockets>=15.0.1",
]
